language/tests/run_pass/access_fspace_constraints_ptr.lg
-- Copyright 2015 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

import "legion"

local c = legionlib.c

fspace k (r : region(int)) {
  s : region(int),
  x : ptr(int, s),
} where s <= r end

task g(a : region(int), b : k(a)) : int
where reads(a) do
  return @(b.x)
end

task h() : int
  var t = region(int, 5)
  var tc = [c.legion_coloring_create]();
  [c.legion_coloring_ensure_color](tc, 0)
  var u = partition(disjoint, t, tc)
  [c.legion_coloring_destroy](tc)
  var v = u[0]
  var y = new(ptr(int, v))
  @y = 7
  var z = [k(t)]{ s = v, x = y }
  return g(t, z)
end

task main()
  legionlib.assert(h() == 7)
end
legionlib.start(main)
